clean up + fix findbugs warnings